--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/WebOfTrustInfo"
+    - label: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/in/christophera/"
 
 footer:
   links:
