--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ twitter_username: ChristopherA
 github_username: ChristopherA
 minimal_mistakes_skin: air
 search: true
-author: Christopher Allen
+writer: Christopher Allen
 
 # Build settings
 markdown: kramdown
