Update _config.yml with correct social media links
Signed-off-by: Christopher Allen <ChristopherA@LifeWithAlacrity.com>

--- a/_config.yml
+++ b/_config.yml
@@ -66,10 +66,10 @@ author:
       url: "https://www.LifeWithAlacrity.com/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/WebOfTrustInfo"
+      url: "https://twitter.com/ChristopherA"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/WebOfTrustInfo"
+      url: "https://github.com/ChristopherA"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/christophera/"
