--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email:
 description: "A blog on social software, collaboration, trust, security, privacy, and internet tools by Christopher Allen."
 twitter_username: ChristopherA
 github_username: ChristopherA
-minimal_mistakes_skin: dark
+# minimal_mistakes_skin: dark
 search: true
 writer: Christopher Allen
 
