--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ defaults:
       author_profile: true
       header:
         overlay_image: /assets/images/lwa.png
+        show_overlay_excerpt: false
 
 category_archive:
   type: liquid
