--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ defaults:
       comments: false
       share: false
       related: false
+      search: false
       header:
         overlay_image: /assets/images/lwa.png
 
