--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,7 @@ main:
     url: /about/
   - title: "Posts"
     url: "/posts/"
+  - title: "Search"
+    url: "/search/"
   - title: "Tags"
     url: "/tags/"
