change icon for footer- blockcommons

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ author:
   avatar : "/assets/images/1516163297842.jpeg"
   bio    : "Blockchain & Decentralized Identity Architect — Internet Cryptography Pioneer — Co-author TLS Security Standard — Collaborative Tools & Patterns"
   links:
+  
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://www.LifeWithAlacrity.com/"
@@ -78,7 +79,7 @@ author:
 footer:
   links:
     - label: "Blockchain Commons"
-      icon: "fas fa-info-circle"
+      icon: "fab fa-creative-commons-sampling-plus"
       url: "https://www.blockchaincommons.com/"
     - label: "SmartCustody"
       icon: "fas fa-info-circle"
