--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ writer: Christopher Allen
 # Build settings
 markdown: kramdown
 # theme                    : "minimal-mistakes-jekyll"
+remote_theme             : mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
