--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "Life With Alacrity"
 baseurl: "/www.LifeWithAlacrity.com"
 # email:
-subtitle: "Velocity and Celerity"
+subtitle: "Design Patterns for Digital Collaboration & Trust"
 logo: "/assets/images/apple-touch-icon1.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 
 description: "A blog on social software, collaboration, trust, security, privacy, and internet tools by Christopher Allen."
