Update category link
Signed-off-by: Adamu Elisha Inuwa <40290364+elishadamu97@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ info:
       color: 03a5ce
     - label: "Category"
       icon: "fas fa-layer-group"
-      url: "/category-archive-grid"
+      url: "/category"
       color: e0336f
  
 defaults:
